2007-10-04  Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-sdr-cache.c (_fread_record): Fix free corruption
	bug.

	* common/src/ipmi-sdr-cache.h, common/src/ipmi-sdr-cache.c: Add
	SDR_CACHE_CTX_ERR_CACHE_EMPTY error code.

	* common/src/ipmi-sdr-cache.c (sdr_cache_load): Fix possible
	corner case.
	
2007-10-02  Albert Chu <chu11@llnl.gov>

	* ipmidetect/src/ipmidetect/ipmidetect.c (_cmdline_parse): Fix bug
	in command line option parsing.
	
2007-10-01  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Add daemon scripts for ipmidetectd.
	
2007-09-28  Albert Chu <chu11@llnl.gov>

	* bmc-config/, pef-config/, common/src/, libfreeipmi/srd/udm/:
	Minor bug fixes.
	
2007-09-27  Albert Chu <chu11@llnl.gov>

	* common/src/config-pef-conf-section.h,
	common/src/config-pef-conf-section.c: New files.

	* bmc-config/src/bmc-config-wrapper.h,
	bmc-config/src/bmc-config-wrapper.c: Remove files.

	* bmc-config/, pef-config/: Continued common code re-architecture
	and subsequent code cleanup.

	* libfreeipmi/: Change user_name and password parameters to char
	instead of uint8_t *.

	* ipmipower/, ipmiconsole/: Adjust for pointer signedness changes.

2007-09-26  Albert Chu <chu11@llnl.gov>

	* common/src/config-fiid.h, common/src/config-fiid.c: New files.

	* bmc-config/, pef-config/: Continued common code re-architecture
	and subsequent code cleanup.

2007-09-25  Albert Chu <chu11@llnl.gov>

	* bmc-config/, pef-config/: Continued common code re-architecture
	and subsequent code cleanup.

2007-09-24  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-coding.txt: Update.

	* common/src/config-checkout.h, common/src/config-checkout.c,
	common/src/config-commit.h, common/src/config-commit.c,
	common/src/config-diff.h, common/src/config-diff.c,
	common/src/config-parse.h, common/src/config-parse.c,
	common/src/config-section.h, common/src/config-section.c: New
	files.

	* bmc-config/, pef-config/: Continued common code re-architecture