@@ -8,6 +8,9 @@
 
 	* common/src/ipmi-sdr-cache.c (sdr_cache_load): Fix possible
 	corner case.
+
+	* ipmi-sensors/src/ipmi-sensors.c (display_group_sensors,
+	display_sensor_list, display_sensors): Remove unused code.
 	
 2007-10-02  Albert Chu <chu11@llnl.gov>
 
